tests/ui/attributes/validation-on-associated-items-issue-121537.rs
trait MyTrait {
    #[doc = MyTrait]
    //~^ ERROR attribute value must be a literal
    fn myfun();
}

fn main() {}
